--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="canonical" href="">
-    
+    <!-- <link rel="canonical" href=""> -->
     <meta name="description" content="">
     <meta name="keywords" content="">
 
     <!--Social Media Display-->
 
-
-
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="og:image:secure_url" content=""/>
+     <meta property="og:title" content=""/> 
+     <meta property="og:description" content=""/> 
+     <meta property="og:type" content="website" /> 
+     <meta property="og:url" content=""/> 
+     <meta property="og:image" content=""/> 
+     <meta property="og:image:secure_url" content=""/> 
 
     <!--Favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -30,15 +26,17 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/local.css">
-    <link rel="stylesheet" href="/css/dark.css">
-    <link rel="stylesheet" href="/css/dark-root-styles.css">
+
+    <link rel="stylesheet" href="./css/root.css">
+    <link rel="stylesheet" href="./css/local.css">
+    <link rel="stylesheet" href="./css/dark.css">
+    <link rel="stylesheet" href="./css/dark-root-styles.css">
 
     <title>Title | Business | Location, WA</title>
 </head>
 <body>
-
+    <style>
+    </style>
     <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a>
 
     <header>
@@ -46,9 +44,9 @@
         <!-- Mobile Nav Strip -->
         <div class="mobile-wrapper">
             <div class="mobile-nav container mobile-nav-container">
-                <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" width="110" height="32">
+                <img class="light" id="mobile-logo" src="./images/logo.svg" alt="mobile_company_logo" width="110" height="32">
 
-                <img class="dark" id="mobile-logo" src="/images/logo-white.svg" alt="mobile_company_logo" width="110" height="32">
+                <img class="dark" id="mobile-logo" src="./images/logo-white.svg" alt="mobile_company_logo" width="110" height="32">
 
                 <!-- Hamburger Menu -->
                 <button aria-label="open the menu" id="menu-button" class="hamburger hamburger--spring" onclick="toggleNav()" type="button">
@@ -66,22 +64,22 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="images/logo.svg" alt="compnay logo" height="80">
-                        <img class="dark" aria-hidden="true" decoding="async" src="images/logo-white.svg" alt="compnay logo" height="80">
+                    <a class="nav-logo" href="./index.html">
+                        <img class="light" aria-hidden="true" decoding="async" src="./images/logo.svg" alt="compnay logo" height="80">
+                        <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
                         <li class="nav-li"><a id="active-menu" href="index.html">Home</a></li>
-                        <li class="nav-li"><a class="link" href="/about.html">About</a></li>
+                        <li class="nav-li"><a class="link" href="./about.html">About</a></li>
                         <li class="nav-li"><a class="link" href="index.html#services">Services</a></li>
                         <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html">Testimonials</a></li>
-                        <li class="nav-li"><a class="link" href="/contact.html">Contact</a></li>
+                        <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li>
+                        <li class="nav-li"><a class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
-                    <img class="moon" aria-hidden="true" src="/images/moon.svg" alt="" width="24" height="24">
-                    <img class="sun" aria-hidden="true" src="/images/sun.svg" alt="" width="24" height="24">
+                    <img class="moon" aria-hidden="true" src="./images/moon.svg" alt="" width="24" height="24">
+                    <img class="sun" aria-hidden="true" src="./images/sun.svg" alt="" width="24" height="24">
                 </button>
             </div>
         </nav>
@@ -96,17 +94,17 @@
         <section id="hero">
             <div class="hero-content">
                 <div class="heroText">
-                    <h1 id="home-h">Main headline, put top keyword here</h2>
+                    <h1 id="home-h">For all your earthmoving needs</h2>
                     <p>
                         Expand on the keyword with more keywords and add a list of related services that you do and include the city, state of your service area.  
                     </p>
                     <div class="buttons">
-                        <a class="button-solid" href="/about.html" >
+                        <a class="button-solid" href="./about.html" >
                             About Us
                         </a>
                         <a class="call-now" href="tel:555-213-9120">
-                            <img class="light" decoding="async" src="/images/phone.svg" alt="" aria-hidden="true" width="21" height="21">
-                            <img class="dark" decoding="async" src="/images/phone-dark.svg" alt="" aria-hidden="true" width="21" height="21">
+                            <img class="light" decoding="async" src="./images/phone.svg" alt="" aria-hidden="true" width="21" height="21">
+                            <img class="dark" decoding="async" src="./images/phone-dark.svg" alt="" aria-hidden="true" width="21" height="21">
                             <div class="group">
                                 <span class="text">Call Now</span>
                                 <span class="number">(555) 213-9120</span>
@@ -114,7 +112,7 @@
                         </a>
                     </div>
                 </div>
-                <img decoding="async" src="/images/ryan-caselli.png" alt="" class="business-casual" width="" height="">
+                <img decoding="async" src="./images/ryan-caselli.png" alt="" class="business-casual" width="" height="">
             </div>
         </section>
 
@@ -128,21 +126,21 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue.
                 </p>
-                <a href="/contact.html" class="button-solid">Get in Touch</a>
+                <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
             <div class="service">
                 <h2>This is THE main<span> service you do</span></h2>
                 <p>
                     Notice how this one is bigger and darker, this is your main service you provide.
                 </p>
-                <a href="/contact.html" class="button-solid">Get in Touch</a>
+                <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
             <div class="service">
                 <h2>This is a main<span> service you do</span></h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue .
                 </p>
-                <a href="/contact.html" class="button-solid">Get in Touch</a>
+                <a href="./contact.html" class="button-solid">Get in Touch</a>
             </div>
         </section>
 
@@ -161,7 +159,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-white.svg" alt="logo" width="293" height="91"></a>
+                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-white.svg" alt="logo" width="293" height="91"></a>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus mollitia sequi placeat dignissimos adipisci explicabo excepturi a beatae architecto autem.  
                 </p>
@@ -170,19 +168,19 @@
                 <div class="lists">
                     <ul>
                         <li><h2>Company</h2></li>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/contact.html">Services</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./contact.html">Services</a></li>
                     </ul>
                     <ul>
                         <li><h2>Support</h2></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="/images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
                     </ul>
                 </div>
     
@@ -210,6 +208,6 @@
         }
     </script>
 
-    <script defer src="/app.js"></script>
+    <script defer src="./app.js"></script>
 </body>
 </html>
