--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- CSS -->
-
     <link rel="stylesheet" href="./css/root.css">
     <link rel="stylesheet" href="./css/local.css">
     <link rel="stylesheet" href="./css/dark.css">
     <link rel="stylesheet" href="./css/dark-root-styles.css">
 
-    <title>Title | Business | Location, WA</title>
+    <title>Juiblee | Earthmoving | Airlie Beach, QLD</title>
 </head>
 <body>
     <style>
@@ -65,14 +64,13 @@
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
                     <a class="nav-logo" href="./index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="./images/logo.svg" alt="compnay logo" height="80">
+                        <img class="light" aria-hidden="true" decoding="async" src="#" alt="compnay logo" height="80">
                         <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
                         <li class="nav-li"><a id="active-menu" href="index.html">Home</a></li>
                         <li class="nav-li"><a class="link" href="./about.html">About</a></li>
                         <li class="nav-li"><a class="link" href="index.html#services">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
                         <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li>
                         <li class="nav-li"><a class="link" href="./contact.html">Contact</a></li>
                     </ul>
@@ -95,25 +93,54 @@
             <div class="hero-content">
                 <div class="heroText">
                     <h1 id="home-h">For all your earthmoving needs</h2>
-                    <p>
-                        Expand on the keyword with more keywords and add a list of related services that you do and include the city, state of your service area.  
-                    </p>
+                    <div class="services">
+                        <div class="services-list-one">
+                            <ul>
+                                <li>
+                                    Positrack
+                                </li>
+                                <li>
+                                    Six tonne Excavator
+                                </li>
+                                <li>
+                                    Augers
+                                </li>
+                                <li>
+                                    Rock Hammer
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="services-list-two">
+                            <ul>
+                                <li>
+                                    Rock Grab
+                                </li>
+                                <li>
+                                    Pallet Forks
+                                </li>
+                                <li>
+                                    Twin Steer Tipper
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="buttons">
                         <a class="button-solid" href="./about.html" >
                             About Us
                         </a>
-                        <a class="call-now" href="tel:555-213-9120">
+                        <a class="call-now" href="tel:0400797889">
                             <img class="light" decoding="async" src="./images/phone.svg" alt="" aria-hidden="true" width="21" height="21">
                             <img class="dark" decoding="async" src="./images/phone-dark.svg" alt="" aria-hidden="true" width="21" height="21">
                             <div class="group">
                                 <span class="text">Call Now</span>
-                                <span class="number">(555) 213-9120</span>
+                                <span class="number">0400797889 </span>
                             </div>
                         </a>
                     </div>
                 </div>
-                <img decoding="async" src="./images/ryan-caselli.png" alt="" class="business-casual" width="" height="">
             </div>
+            <img decoding="async" src="./images/excavator.jpeg" alt="" class="business-casual" width="" height="">
         </section>
 
         <!-- ============================================ -->
