Update contact info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="nav-li"><a id="active-menu" href="index.html">Home</a></li>
                         <li class="nav-li"><a class="link" href="./about.html">About</a></li>
                         <li class="nav-li"><a class="link" href="index.html#services">Services</a></li>
-                        <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li>
+                        <!-- <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li> -->
                         <li class="nav-li"><a class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -185,12 +185,8 @@
 
     <footer id="footer">
         <div class="container">
-            <div class="left-section">
-                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-white.svg" alt="logo" width="293" height="91"></a>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus mollitia sequi placeat dignissimos adipisci explicabo excepturi a beatae architecto autem.  
-                </p>
-            </div>
+            <!-- <div class="left-section"> -->
+            <!--          </div> -->
             <div class="right-section">
                 <div class="lists">
                     <ul>
@@ -205,9 +201,9 @@
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
-                        <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
-                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Juiblee Pocket, Airlie Beach, Queensland</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:0400797889">0400797889</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="brad.willmington@gmail.com">brad.willmington@gmail.com</a></li>
                     </ul>
                 </div>
     
