Update nav title

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
                     <a class="nav-logo" href="./index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="#" alt="compnay logo" height="80">
-                        <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80">
+                        <img class="light" aria-hidden="true" decoding="async" src="#" alt="Juiblee Earth Works" height="80">
+                        <!-- <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80"> -->
                     </a>
                     <ul id="on-top" class="navbar-links">
                         <li class="nav-li"><a id="active-menu" href="index.html">Home</a></li>
