--- a/about.html
+++ b/about.html
@@ -19,33 +19,32 @@
     <meta property="og:image:secure_url" content=""/>
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="./image/png" sizes="32x32" href="./favicon-32x32.png?v1">
+    <link rel="icon" type="./image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/about.css">
-    <link rel="stylesheet" href="/css/dark.css">
-    <link rel="stylesheet" href="/css/dark-root-styles.css">
+    <link rel="stylesheet" href="./css/root.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/dark.css">
+    <link rel="stylesheet" href="./css/dark-root-styles.css">
 
     <title></title>
 </head>
 <body>
 
-    <a class="skip" aria-label="skip to main content" href="index.html#main">Click To Skip To Main</a>
+    <a class="skip" aria-label="skip to main content" href="./index.html#main">Click To Skip To Main</a>
 
     <header>
 
         <!-- Mobile Nav Strip -->
         <div class="mobile-wrapper">
             <div class="mobile-nav container mobile-nav-container">
-                <img class="light" id="mobile-logo" src="/images/logo.svg" alt="mobile_company_logo" height="60">
-
-                <img class="dark" id="mobile-logo" src="/images/logo-white.svg" alt="mobile_company_logo" height="60">
+                <!-- <img class="light" id="mobile-logo" src="./images/logo.svg" alt="mobile_company_logo" height="60"> -->
+                <!-- <img class="dark" id="mobile-logo" src="./images/logo-white.svg" alt="mobile_company_logo" height="60"> -->
 
                 <!-- Hamburger Menu -->
                 <button aria-label="open the menu" id="menu-button" class="hamburger hamburger--spring" onclick="toggleNav()" type="button">
@@ -63,22 +62,22 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="images/logo.svg" alt="compnay logo" height="80">
-                        <img class="dark" aria-hidden="true" decoding="async" src="images/logo-white.svg" alt="compnay logo" height="80">
+                    <a class="nav-logo" href="./index.html">
+                        <!-- <img class="light" aria-hidden="true" decoding="async" src="./images/logo.svg" alt="compnay logo" height="80"> -->
+                        <!-- <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80"> -->
                     </a>
                     <ul id="on-top" class="navbar-links">
-                        <li class="nav-li"><a class="link" href="/index.html">Home</a></li>
-                        <li class="nav-li"><a id="active-menu" class="link" href="/about.html">About</a></li>
-                        <li class="nav-li"><a class="link" href="index.html#services">Services</a></li>
+                        <li class="nav-li"><a class="link" href="./index.html">Home</a></li>
+                        <li class="nav-li"><a id="active-menu" class="link" href="./about.html">About</a></li>
+                        <li class="nav-li"><a class="link" href="./index.html#services">Services</a></li>
                         <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html">Testimonials</a></li>
-                        <li class="nav-li"><a class="link" href="/contact.html">Contact</a></li>
+                        <!-- <li class="nav-li"><a class="link" href="./testimonials.html">Testimonials</a></li> -->
+                        <li class="nav-li"><a class="link" href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
-                    <img class="moon" aria-hidden="true" src="/images/moon.svg" alt="" width="24" height="24">
-                    <img class="sun" aria-hidden="true" src="/images/sun.svg" alt="" width="24" height="24">
+                    <img class="moon" aria-hidden="true" src="./images/moon.svg" alt="" width="24" height="24">
+                    <img class="sun" aria-hidden="true" src="./images/sun.svg" alt="" width="24" height="24">
                 </button>
             </div>
         </nav>
@@ -91,7 +90,7 @@
         <!-- ============================================ -->
     
         <section id="int-hero">
-            <h1 id="home-h">About Company</h2>
+            <h1 id="home-h">About Jubilee Earthworks</h2>
         </section>
 
         <!-- ============================================ -->
@@ -101,7 +100,7 @@
         <section id="about-content" class="section">
             <div class="container">
                 <div class="image">
-                    <img decoding="async" src="/images/about-image.jpg" alt="" width="" height="">
+                    <img decoding="async" src="./images/about-image.jpg" alt="" width="" height="">
                 </div>
                 <div class="content">
                     <span class="topper">Who We Are</span>
@@ -130,54 +129,12 @@
             <div class="container">
                 <div class="member">
                     <div class="image">
-                        <img decoding="async" src="/images/about-image.jpg" alt="" width="" height="">
+                        <img decoding="async" src="./images/about-image.jpg" alt="" width="" height="">
                     </div>
                     <div class="content">
                         <div class="desc">
-                            <h3>Brad Pitt</h3>
+                            <h3>Brad Willmington</h3>
                             <span class="title">Owner/Operator</span></div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eos asperiores, magni atque, a, necessitatibus consectetur molestiae rerum quaerat cum fugiat soluta quam voluptatum. Ut, totam debitis? Quisquam nesciunt tenetur officiis pariatur? Nostrum aspernatur officiis quos iusto nisi assumenda fugiat.
-                        </p>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="image">
-                        <img decoding="async" src="/images/about-image.jpg" alt="" width="" height="">
-                    </div>
-                    <div class="content">
-                        <div class="desc">
-                            <h3>Gus Chuggins</h3>
-                            <span class="title">Office Administrator/LVN</span>
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eos asperiores, magni atque, a, necessitatibus consectetur molestiae rerum quaerat cum fugiat soluta quam voluptatum. Ut, totam debitis? Quisquam nesciunt tenetur officiis pariatur? Nostrum aspernatur officiis quos iusto nisi assumenda fugiat. 
-                        </p>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="image">
-                        <img loading="lazy" decoding="async" src="/images/about-image.jpg" alt="" width="" height="">
-                    </div>
-                    <div class="content">
-                        <div class="desc">
-                            <h3>Rip Magnificant</h3>
-                            <span class="title">PMHNP-BC</span>
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eos asperiores, magni atque, a, necessitatibus consectetur molestiae rerum quaerat cum fugiat soluta quam voluptatum. Ut, totam debitis? Quisquam nesciunt tenetur officiis pariatur? Nostrum aspernatur officiis quos iusto nisi assumenda fugiat.
-                        </p>
-                    </div>
-                </div>
-                <div class="member">
-                    <div class="image">
-                        <img loading="lazy" decoding="async" src="/images/about-image.jpg" alt="" width="" height="">
-                    </div>
-                    <div class="content">
-                        <div class="desc">
-                            <h3>Armie Sledgehammer</h3>
-                            <span class="title">PMHNP-BC</span>
-                        </div>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti eos asperiores, magni atque, a, necessitatibus consectetur molestiae rerum quaerat cum fugiat soluta quam voluptatum. Ut, totam debitis? Quisquam nesciunt tenetur officiis pariatur? Nostrum aspernatur officiis quos iusto nisi assumenda fugiat.
                         </p>
@@ -195,7 +152,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-white.svg" alt="logo" width="293" height="91"></a>
+                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="/images/logo-white.svg" alt="logo" width="293" height="91"></a>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aut. Molestias delectus rem nihil distinctio nemo assumenda laudantium. Veritatis, natus.
                 </p>
@@ -204,19 +161,19 @@
                 <div class="lists">
                     <ul>
                         <li><h2>Company</h2></li>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/contact.html">Services</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./contact.html">Services</a></li>
                     </ul>
                     <ul>
                         <li><h2>Support</h2></li>
-                        <li><a href="/contact.html">Contact Us</a></li>
+                        <li><a href="./contact.html">Contact Us</a></li>
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="/images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
-                        <li><img loading="lazy" decoding="async" src="/images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Jubilee</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:0400797889">0400797889</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="brad.willmington@gmail.com">brad.willmington@gmail.com</a></li>
                     </ul>
                 </div>
     
@@ -244,6 +201,6 @@
         }
     </script>
 
-    <script defer src="/app.js"></script>
+    <script defer src="./app.js"></script>
 </body>
 </html>
