--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- <link rel="canonical" href=""> -->
-    <meta name="description" content="">
+
     <meta name="keywords" content="">
+    <meta name="description" content="">
 
     <!--Social Media Display-->
 
@@ -31,12 +31,12 @@
     <link rel="stylesheet" href="./css/dark.css">
     <link rel="stylesheet" href="./css/dark-root-styles.css">
 
-    <title>Juiblee | Earthmoving | Airlie Beach, QLD</title>
+    <title>Juiblee Earthworks | Airlie Beach, QLD</title>
 </head>
 <body>
     <style>
     </style>
-    <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a>
+    <!-- <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main</a> -->
 
     <header>
 
@@ -64,7 +64,8 @@
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
                     <a class="nav-logo" href="./index.html">
-                        <img class="light" aria-hidden="true" decoding="async" src="#" alt="Juiblee Earth Works" height="80">
+                        <h2>Juiblee Earthworks</h2>
+                        <!-- <img class="light" aria-hidden="true" decoding="async" src="#" alt="Juiblee Earth Works" height="80"> -->
                         <!-- <img class="dark" aria-hidden="true" decoding="async" src="./images/logo-white.svg" alt="compnay logo" height="80"> -->
                     </a>
                     <ul id="on-top" class="navbar-links">
@@ -214,6 +215,7 @@
                 </div>
             </div>
         </div>
+        <div>Zac Willmington Web Development</div>
     </footer>
 
     <script>
