Update about us

--- a/about.html
+++ b/about.html
@@ -101,9 +101,7 @@
                         <img src="/images/leaf.svg" alt="">
                         <div class="line"></div>
                     </div>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam laborum impedit assumenda ut doloremque, culpa dignissimos quaerat tenetur suscipit mollitia quod nobis cupiditate hic ducimus repudiandae ipsum similique iste voluptatem! Omnis velit dolorum fugit assumenda maiores tempora et molestias numquam. Dolorum, quas quisquam iure maiores a ipsam sequi quam laborum.   
-                    </p>
+                    <p>Jubilee earthworks is owned and operated by an experienced construction professional with over 30 years in the industry. We have established a reputation for excellence and dependability within the community. We are dedicated to working efficiently and safely to complete each project to the satisfaction of our clients. Whether you need excavation, grading, trenching underslab prep, auger drilling or any other earthworks service, we have the skills and equipment to get the job done right. We pride ourselves on our attention to detail and commitment to customer satisfaction, and we look forward to working with you on your next project.</p>
                 </div>
             </div>
         </section>
