--- a/about.html
+++ b/about.html
@@ -98,10 +98,10 @@
                     <span class="topper">Who We Are</span>
                     <h2>We have over thirty years construction expericence</h2>
                     <div aria-hidden="true" class="decoration">
-                        <img src="/images/leaf.svg" alt="">
                         <div class="line"></div>
                     </div>
-                    <p>Jubilee earthworks is owned and operated by an experienced construction professional with over 30 years in the industry. We have established a reputation for excellence and dependability within the community. We are dedicated to working efficiently and safely to complete each project to the satisfaction of our clients. Whether you need excavation, grading, trenching underslab prep, auger drilling or any other earthworks service, we have the skills and equipment to get the job done right. We pride ourselves on our attention to detail and commitment to customer satisfaction, and we look forward to working with you on your next project.</p>
+                    <p>Jubilee earthworks is owned and operated by an experienced construction professional with over 30 years in the industry. We have established a reputation for excellence and dependability within the community.</p> 
+                    <p>We are dedicated to working efficiently and safely to complete each project to the satisfaction of our clients. Whether you need excavation, grading, trenching underslab prep, auger drilling or any other earthworks service, we have the skills and equipment to get the job done right. We pride ourselves on our attention to detail and commitment to customer satisfaction, and we look forward to working with you on your next project.</p>
                 </div>
             </div>
         </section>
