Remove the footer zac willmington

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div>Zac Willmington Web Development</div>
+        <!-- <div> Zac Willmington Web Development </div> -->
     </footer>
 
     <script>
