Update email address

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                         <li><h2>Get in Touch</h2></li>
                         <li><img loading="lazy" decoding="async" src="./images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Jubilee Pocket, Airlie Beach</a></li>
                         <li><img loading="lazy" decoding="async" src="./images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:0400797889">0400797889</a></li>
-                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="brad.willmington@gmail.com">brad.willmington@gmail.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="./images/email.svg" alt="" width="24" height="24"><a href="bradwillmington@bigpond.com">bradwillmington@bigpond.com</a></li>
                     </ul>
                 </div>
     
