--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="info-group">
                     <span class="heading">Email</span>
-                    <a class="info" href="mailto:brad.willmington@gmail.com">brad.willmington@gmail.com</a>
+                    <a class="info" href="mailto:bradwillmington@bigpond.com">bradwillmington@bigpond.com</a>
                 </div>
             </div>
         </section>
